Updated documentation and fixed visibility problems

--- a/style.scss
+++ b/style.scss
@@ -119,7 +119,7 @@ ion-icon {
 
 a.ws-button {
   color: $base-lighten-color;
-  border: 1px solid $divider-color;
+  border: 1px solid $base-lighten-color;
   border-radius: 20.5px;
   padding: 6px 18px;
   background: $background-color;
@@ -197,7 +197,7 @@ div.intro {
 }
 
 .levels>div {
-  width: 40%;
+  width: 42.5%;
 }
 
 .card {
@@ -599,7 +599,6 @@ img {
 .site-name {
   margin: 0 auto;
   color: $base-color;
-  cursor: pointer;
   font-family: Alkhemikal;
   font-weight: 700;
   font-size: 44px;
@@ -700,7 +699,6 @@ nav {
 
 .posts > .post:last-child {
   padding-bottom: 1em;
-  border-bottom: none;
 }
 
 
